# PascalToC

./: .gitignore  CMakeLists.txt  README.md  Readme.htm  analyse.cxx  array.h  bring.cxx  bring.h  dprintf.cxx  io.c  io.h  lex.cxx  lex.l  lex.yy.c  main.cxx  main.h  makefile  makefile.mvc  nmtbl.cxx  nmtbl.h  parser.cxx  parser.h  parser.y  ptoc.cfg  ptoc.h  ptoc.pas  token.cxx  token.dpp  token.h  tpexpr.cxx  tpexpr.h  tptoc.pas  trnod.cxx  trnod.h  util.cxx
WinBGI/: CMakeLists.txt  makefile.mvc  winbgi.cxx
Xbgi/: floodfill.c  getarccoords.c  getbkcolor.c  getch.c  getcolor.c  getdefaultpalette.c  getfillsettings.c  getlinesettings.c  getmaxx.c  getmaxy.c  getpalette.c  getpixel.c  gettextsettings.c  getviewsettings.c  graphics.h  initgraph.c  putimage.c  restorecrtmode.c  rotated.c  setallpalette.c  settextstyle.c
examples/: makefile.mvc  test.c  test.cxx
